--- a/roles/syslog-forwarder/templates/filebeat.yml.j2
+++ b/roles/syslog-forwarder/templates/filebeat.yml.j2
@@ -16,9 +16,9 @@ shipper:
 output:
   logstash:
     hosts: ["{{logstach_server1}}:5044",   # Logstash_1
-            {%- if logstach_server2 != "" -%}
+            {% if logstach_server2 != "" -%}
             "{{logstach_server2}}:5044"   # Logstash_2
-            {%- endif -%}
+            {%- endif %}
            ]
     loadbalance: true
     worker: 8
